# GameEngine

./: README.md
Game-Engine/: .cproject  .project  CMakeLists.txt  main.cpp
Game-Engine/.metadata/: version.ini
Game-Engine/.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
Game-Engine/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree  3.tree  4.tree
Game-Engine/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Game-Engine/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Game-Engine/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
Game-Engine/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Game-Engine/application/: Application.cpp  Application.h
Game-Engine/common/: CommonDefines.h
Game-Engine/engine/: Engine.cpp  Engine.h  EngineConfigLoader.cpp  EngineConfigLoader.h
Game-Engine/engine/config/: EngineConfig.h
Game-Engine/game/: Game.cpp  Game.h
Game-Engine/game/board/: GameBoard.cpp  GameBoard.h  MoveSelector.cpp  MoveSelector.h
Game-Engine/game/board/boardAnim/: GameBoardAnim.cpp  GameBoardAnim.h
Game-Engine/game/buttonInterface/: ButtonInterface.h
Game-Engine/game/buttons/: WheelButton.cpp  WheelButton.h
Game-Engine/game/config/: GameCfg.h
Game-Engine/game/defines/: ChessDefines.h  ChessStructs.h
Game-Engine/game/entities/: Hero.cpp  Hero.h  Wheel.cpp  Wheel.h
Game-Engine/game/interfaces/: GameBoardInterface.h  GameInterface.h
Game-Engine/game/logic/: GameLogic.cpp  GameLogic.h  InputInverter.cpp  InputInverter.h
Game-Engine/game/movesPlayersId/: MovePlayersId.cpp  MovePlayersId.h
Game-Engine/game/panels/: PiecePromotionPanel.cpp  PiecePromotionPanel.h
Game-Engine/game/panels/buttons/: PiecePromotionButton.cpp  PiecePromotionButton.h
Game-Engine/game/panels/config/: PiecePromotionButtonCfg.h  PiecePromotionPanelCfg.h
Game-Engine/game/pieces/: PieceHandler.cpp  PieceHandler.h  PieceHandlerPopulator.cpp  PieceHandlerPopulator.h
Game-Engine/game/pieces/types/: Bishop.cpp  Bishop.h  ChessPiece.cpp  ChessPiece.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  UnfinishedPiece.cpp  UnfinishedPiece.h
Game-Engine/game/proxies/: GameBoardInterface.h
Game-Engine/game/utils/: BoardPos.h  BoardUtils.cpp  BoardUtils.h
Game-Engine/manager/: CMakeLists.txt
Game-Engine/manager/include/manager/buttonBase/: ButtonBase.h
Game-Engine/manager/include/manager/config/: DrawMgrCfg.h  ManagerHandlerCfg.h  RsrcMgrCfg.h
Game-Engine/manager/include/manager/debug/: Console.h
Game-Engine/manager/include/manager/drawing/: Fbo.h  Image.h  Text.h  Widget.h
Game-Engine/manager/include/manager/managers/: DrawMgr.h  ManagerHandler.h  MgrBase.h  RsrcMgr.h  TimerMgr.h
Game-Engine/manager/include/manager/time/: TimerClient.h  TimerData.h
Game-Engine/manager/src/buttonBase/: ButtonBase.cpp
Game-Engine/manager/src/debug/: Console.cpp
Game-Engine/manager/src/drawing/: Fbo.cpp  Image.cpp  Text.cpp  Widget.cpp
Game-Engine/manager/src/managers/: DrawMgr.cpp  ManagerHandler.cpp  RsrcMgr.cpp  TimerMgr.cpp
Game-Engine/manager/src/time/: TimerClient.cpp
Game-Engine/sdl/: CMakeLists.txt  Event.cpp  Event.h  MonitorWindow.cpp  MonitorWindow.h  Renderer.cpp  Renderer.h  SDLLoader.cpp  SDLLoader.h  Texture.cpp  Texture.h
Game-Engine/sdl/config/: ImageContainerCfg.h  MonitorWindowCfg.h
Game-Engine/sdl/containers/: ImageContainer.cpp  TextContainer.cpp  TextContainer.h
Game-Engine/sdl/include/sdl/: MonitorWindow.h  Renderer.h  Texture.h
Game-Engine/sdl/include/sdl/config/: ImageContainerCfg.h  MonitorWindowCfg.h  TextContainerCfg.h
Game-Engine/sdl/include/sdl/containers/: FboContainer.h  ImageContainer.h  TextContainer.h
Game-Engine/sdl/src/: Event.cpp  MonitorWindow.cpp  Renderer.cpp  SDLLoader.cpp  Texture.cpp
Game-Engine/sdl/src/containers/: FboContainer.cpp  ImageContainer.cpp  TextContainer.cpp
Game-Engine/utils/: CMakeLists.txt
Game-Engine/utils/drawing/: Color.cpp  Color.h  DrawParams.h  Point.cpp  Rectangle.cpp
Game-Engine/utils/include/utils/drawing/: Color.h  DrawParams.h  Point.h  Rectangle.h
Game-Engine/utils/include/utils/thread/: ThreadUtils.h
Game-Engine/utils/include/utils/time/: Time.h
Game-Engine/utils/src/drawing/: Color.cpp  DrawParams.cpp  Point.cpp  Rectangle.cpp
Game-Engine/utils/src/thread/: ThreadUtils.cpp
Game-Engine/utils/src/time/: Time.cpp
Game-Engine/utils/thread/: ThreadUtils.cpp
Game-Engine/utils/time/: Time.cpp
